# nagoya

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/api/: Cargo.toml
src/api/src/: lib.rs
src/api/templates/: index.html.tera  layout.html.tera  new.html.tera  register.html.tera
src/entity/: Cargo.toml
src/entity/src/: api.rs  lib.rs  m_account.rs  m_character.rs  m_role.rs  m_user.rs  post.rs  posts.rs  prelude.rs
src/migration/: Cargo.toml
src/migration/src/: m20220120_000001_create_post_table.rs
src/service/: Cargo.toml
src/service/src/: mutation.rs  query.rs
