[package]
name = "nagoya"
version = "0.1.0"
edition = "2021"


[dependencies]
#dotenvy = { version = "0.15" }
#tracing = { version = "0.1.37" }
#tracing-subscriber = { version = "0.2.25" }
#serde_json = "1.0.107"
#chrono = "0.4.31"
#actix-web = { version = "4.4.0" }
#sea-orm = { version = "0.12.2", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros","debug-print","with-json","with-chrono","with-time","with-bigdecimal" ] }
#tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }

[dependencies.actix-example-api]
path = "src/api"