[package]
name = "actix-example-api"
version = "0.1.0"
authors = ["Sam Samai <sam@studio2pi.com.au>"]
edition = "2021"
publish = false

[dependencies]
actix-files = "0.6.2"
actix-http = "3.4.0"
actix-rt = "2.9"
actix-service = "2.0.2"
actix-web = "4.4.0"
tera = "1.19.0"
dotenvy = "0.15"
listenfd = "1.0.1"
serde = "1.0.188"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

actix-example-service = { path = "../service" }
entity = { path = "../entity" }
migration = { path = "../migration" }

