[package]
name = "nagoya_service"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "0.12.7" # sea-orm version
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-mysql",
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
